@@ -24,7 +24,11 @@ lib_LIBRARIES = libhurd-btree.a
 includehurddir = $(includedir)/hurd
 includehurd_HEADERS = btree.h
 
-AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/libc-parts
+AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/libc-parts -D_GNU_SOURCE
 libhurd_btree_a_SOURCES = btree.h btree.c
 
-EXTRA_DIST = btree-test.c
+TESTS = btree-test
+
+check_PROGRAMS = btree-test
+btree_test_SOURCES = btree-test.c btree.h
+btree_test_LDADD = libhurd-btree.a
